--- a/README
+++ b/README
@@ -48,7 +48,7 @@ Async Mental Magic v20181208b
 
   2e  Cards in graveyards cease to exist when state-based effects happen
       UNLESS they're being referenced by something on the stack OR
-      a delayed triggered ability. (Kitchen Finks and Loyal Cather both
+      a delayed triggered ability. (Kitchen Finks and Loyal Cathar both
       work as expected. But you can't cast Zombify in time for it to work.)
 
   2f  Cards in exile cease to exist when state-based effects happen UNLESS
