--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Async Mental Magic v20181208b
+Async Mental Magic v20181209a
 
 1   For the sake of play-by-post, cards have IDs that are public
     information, even when the cards are in players' hands. IDs are like
@@ -29,6 +29,12 @@ Async Mental Magic v20181208b
 
 !gameover
     > End the current game. All cards will FLIP.
+
+!r 3 #Goblin Arsonist: 1=me;2=Pyknite;3=Llanowar Elves
+    > Roll a die numbered from 1 to N.
+
+!r me Pyknite LlanowarElves #Goblin Arsonist
+    > Randomly pick an item from a space-delimited list of choices.
 
 2   Libraries are inexhaustible.
 
