--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Async Mental Magic v20181209a
+Async Mental Magic v20181214a
 
 1   For the sake of play-by-post, cards have IDs that are public
     information, even when the cards are in players' hands. IDs are like
@@ -48,14 +48,19 @@ Async Mental Magic v20181209a
       Sideboards contain inexhaustible supplies of Plains, Island, Swamp,
       Mountain, Forest, and nothing else.
 
-  2d  ID'd cards in libraries cease to exist when state-based effects happen.
+  2d  ID'd cards in libraries cease to exist when state-based effects happen,
+      UNLESS they're being referenced by a continuous effect that references
+      a specific number of cards (e.g. not "Cards in your library are red").
       (Opt works as expected. The cards returned by Brainstorm and Time Ebb
-      are lost.)
+      are lost. Sphinx of Jwar Isle works as expected (and even prevents one
+      of the cards returned by Brainstorm from being lost). Orcish Spy
+      doesn't work (unless your opponent has Sphinx of Jwar Isle).)
 
   2e  Cards in graveyards cease to exist when state-based effects happen
-      UNLESS they're being referenced by something on the stack OR
-      a delayed triggered ability. (Kitchen Finks and Loyal Cathar both
-      work as expected. But you can't cast Zombify in time for it to work.)
+      UNLESS they're being referenced by a continuous effect, an object on
+      the stack, or a delayed triggered ability, that references a specific
+      number of cards. (Kitchen Finks and Loyal Cathar both work as expected.
+      But you can't cast Zombify in time for it to work.)
 
   2f  Cards in exile cease to exist when state-based effects happen UNLESS
       they're being referenced by ANYTHING, even themselves (e.g. Suspend).
@@ -164,14 +169,16 @@ Async Mental Magic v20181209a
 
   7f  There's no way to make any decisions before the first turn.
 
-  7g  Ignore Rules 7 and 8 when a "Mindslaver" effect is active.
+  7g  When a "Mindslaver" effect is active, the controlling player plays
+      for the controlled player within the framework of Rules 7 and 8.
 
 8   As for uncontrolled decisions, their options are partitioned into the
     following categories: NO_ACTION, SELF, OPPONENT, OTHER, and MYRIAD.
 
   8a  NO_ACTION is any choice that would qualify as taking no action for
       the ordinary Magic rules purposes of determining whether a player
-      would be obligated to break an infinite loop.
+      would be obligated to break an infinite loop. Moreover, when naming
+      a card, if not doing so is an option, then not doing so is NO_ACTION.
 
   8b  SELF and OPPONENT are choices of one player or one or more of their
       objects over the other(s).
@@ -181,7 +188,9 @@ Async Mental Magic v20181209a
       are MYRIAD.
 
   8d  Uncontrolled decisions default to NO_ACTION if possible, else random
-      from non-MYRIAD options, else choose the smallest number allowed,
+      from non-MYRIAD options, else enumerate and random from all MYRIAD
+      options if finite and feasible (possibly pausing the game to debate
+      feasibility), else if choosing a number choose the smallest option,
       else pause the game and debate further rules.
 
   8e  The defaults in 8d can be overridden by specifying which category or
