--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Async Mental Magic v20181215a
+Async Mental Magic v20181215b
 
 1   For the sake of play-by-post, cards have IDs that are public
     information, even when the cards are in players' hands. IDs are like
@@ -26,7 +26,7 @@ Async Mental Magic v20181215a
 !turnover
     > End control of your turn. Before you do, remember to specify orders
       for assigning damage to blockers and set categories for uncontrolled
-      decisions, then peek at the top card of your library. (See Rules 7+)
+      choices, then peek at the top card of your library. (See Rules 7+)
 
 !gameover
     > End the current game. All cards will FLIP.
@@ -137,7 +137,9 @@ Async Mental Magic v20181215a
     "control of the turn".
 
   7a  Control turns over at end of turn OR when the non-active player has a
-      decision, with more than one option.
+      decision, with multiple options leading to non-identical game states.
+      For the purposes of 7a, successive choices by the same player count
+      as a single decision.
 
   7b  For the purposes of 7a, decisions arising from effects of cards named
       by the non-active player don't qualify. Note that declaring blockers
@@ -180,7 +182,7 @@ Async Mental Magic v20181215a
       card currently existing in the game and multiple-digit numbers, which
       are MYRIAD.
 
-  8d  Uncontrolled decisions default to NO_ACTION if possible, else random
+  8d  Uncontrolled choices default to NO_ACTION if possible, else random
       from non-MYRIAD options, else enumerate and random from all MYRIAD
       options if finite and feasible (possibly pausing the game to debate
       feasibility), else if choosing a number choose the smallest option,
@@ -193,11 +195,16 @@ Async Mental Magic v20181215a
       rank the categories, only select a set to try before default.
       Specs are assumed to be until end of game unless otherwise specified.
 
-  8f  As an exception to the above, the active player, before turning over
+  8f  For the purposes of randomization, choosing X out of Y options is
+      done by randomly choosing an option X times. If a variable number of
+      options can be chosen, do it by choosing a number before choosing the
+      options.
+
+  8g  As an exception to the above, the active player, before turning over
       control, may specify directions in unlimited detail for ordering
       blockers and assigning combat damage.
 
-  8g  Specifications and directions are public information.
+  8h  Specifications and directions are public information.
 
 9   After stating specifications and directions and before doing !turnover,
     you may peek at the top card of your library. (It's worth improving the
